tests/ui/abi3_inheritance.stderr
error[E0277]: pyclass `PyException` cannot be subclassed
 --> tests/ui/abi3_inheritance.rs:4:19
  |
4 | #[pyclass(extends=PyException)]
  |                   ^^^^^^^^^^^ required for `#[pyclass(extends=PyException)]`
  |
  = help: the trait `PyClassBaseType` is not implemented for `PyException`
  = note: `PyException` must have `#[pyclass(subclass)]` to be eligible for subclassing
  = note: with the `abi3` feature enabled, PyO3 does not support subclassing native types
  = help: the trait `PyClassBaseType` is implemented for `PyAny`
note: required by a bound in `PyClassImpl::BaseType`
 --> src/impl_/pyclass.rs
  |
  |     type BaseType: PyTypeInfo + PyClassBaseType;
  |                                 ^^^^^^^^^^^^^^^ required by this bound in `PyClassImpl::BaseType`

error[E0277]: pyclass `PyException` cannot be subclassed
 --> tests/ui/abi3_inheritance.rs:4:1
  |
4 | #[pyclass(extends=PyException)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required for `#[pyclass(extends=PyException)]`
  |
  = help: the trait `PyClassBaseType` is not implemented for `PyException`
  = note: `PyException` must have `#[pyclass(subclass)]` to be eligible for subclassing
  = note: with the `abi3` feature enabled, PyO3 does not support subclassing native types
  = help: the trait `PyClassBaseType` is implemented for `PyAny`
  = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)
